refactor(agent): replace local service calls with Dubbo RPC for auth and analytics
- 使用 Dubbo RPC 调用替换 Agent 侧的本地用户服务 UserService
- AgentAuthorizationController 改为通过 AdminAgentAuthRpcService 获取用户认证信息
- AgentSecurityUserService 通过 AdminAgentAuthRpcService 加载用户信息及权限
- AnalyticsServiceImpl 使用 AdminAgentAnalyticsRpcService 替代本地 AnalyticsMapper 实现运营数据查询
- 移除已废弃的 AnalyticsMapper 接口及对应 XML 配置
- 改写相关测试用例，模拟 AdminAgentAuthRpcService 的返回实现单元测试
- 统一配置文件支持环境变量覆盖，优化服务连接和安全参数配置