@@ -1,22 +1,31 @@
 package cn.zhangchuangla.medicine.agent.service.impl;
 
-import cn.zhangchuangla.medicine.agent.mapper.UserMapper;
+import cn.zhangchuangla.medicine.dubbo.api.admin.AdminAgentAuthRpcService;
+import cn.zhangchuangla.medicine.dubbo.api.client.ClientAgentUserRpcService;
+import cn.zhangchuangla.medicine.dubbo.api.model.AdminAuthContextDto;
+import cn.zhangchuangla.medicine.model.entity.User;
+import cn.zhangchuangla.medicine.model.vo.UserVo;
 import org.junit.jupiter.api.Test;
 
-import java.lang.reflect.Proxy;
+import java.lang.reflect.Field;
 import java.util.Arrays;
-import java.util.List;
+import java.util.LinkedHashSet;
 import java.util.Set;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 class UserServiceImplTests {
 
+    private static void setField(Object target, String fieldName, Object value) throws Exception {
+        Field field = target.getClass().getDeclaredField(fieldName);
+        field.setAccessible(true);
+        field.set(target, value);
+    }
+
     @Test
-    void getUserPermissionCodesByUserId_ShouldReturnEmpty_WhenUserIdIsNull() {
-        UserMapper mapper = createUserMapper(List.of(), List.of(), List.of());
-        UserServiceImpl userService = new UserServiceImpl(mapper);
+    void getUserPermissionCodesByUserId_ShouldReturnEmpty_WhenUserIdIsNull() throws Exception {
+        StubAdminAuthRpcService adminAuthRpcService = new StubAdminAuthRpcService();
+        UserServiceImpl userService = createService(adminAuthRpcService, new StubClientUserRpcService());
 
         Set<String> result = userService.getUserPermissionCodesByUserId(null);
 
@@ -24,61 +33,87 @@ class UserServiceImplTests {
     }
 
     @Test
-    void getUserPermissionCodesByUserId_ShouldReturnAllEnabled_WhenUserIsSuperAdminById() {
-        UserMapper mapper = createUserMapper(
-                List.of("admin"),
-                List.of("mall:product:list"),
-                Arrays.asList(" mall:product:list ", "", null, "mall:product:list", "mall:order:list")
-        );
-        UserServiceImpl userService = new UserServiceImpl(mapper);
+    void getUserPermissionCodesByUserId_ShouldNormalizeCodes() throws Exception {
+        StubAdminAuthRpcService adminAuthRpcService = new StubAdminAuthRpcService();
+        AdminAuthContextDto context = new AdminAuthContextDto();
+        context.setPermissions(new LinkedHashSet<>(Arrays.asList(" mall:product:list ", null, "", "mall:product:list", "mall:order:query")));
+        adminAuthRpcService.byUserId = context;
 
-        Set<String> result = userService.getUserPermissionCodesByUserId(1L);
-
-        assertEquals(Set.of("mall:product:list", "mall:order:list"), result);
-    }
-
-    @Test
-    void getUserPermissionCodesByUserId_ShouldReturnAllEnabled_WhenUserHasSuperAdminRole() {
-        UserMapper mapper = createUserMapper(
-                List.of("admin", "super_admin"),
-                List.of("mall:product:list"),
-                List.of(" system:user:query ", "mall:product:list")
-        );
-        UserServiceImpl userService = new UserServiceImpl(mapper);
-
-        Set<String> result = userService.getUserPermissionCodesByUserId(2L);
-
-        assertEquals(Set.of("system:user:query", "mall:product:list"), result);
-    }
-
-    @Test
-    void getUserPermissionCodesByUserId_ShouldReturnMappedPermissions_WhenUserIsNotSuperAdmin() {
-        UserMapper mapper = createUserMapper(
-                List.of("admin"),
-                Arrays.asList(" mall:product:list ", null, "", "mall:product:list", "mall:order:query"),
-                List.of("system:user:query")
-        );
-        UserServiceImpl userService = new UserServiceImpl(mapper);
+        UserServiceImpl userService = createService(adminAuthRpcService, new StubClientUserRpcService());
 
         Set<String> result = userService.getUserPermissionCodesByUserId(3L);
 
         assertEquals(Set.of("mall:product:list", "mall:order:query"), result);
     }
 
-    private UserMapper createUserMapper(List<String> roleCodes,
-                                        List<String> permissionCodesByUser,
-                                        List<String> allEnabledPermissionCodes) {
-        return (UserMapper) Proxy.newProxyInstance(
-                UserMapper.class.getClassLoader(),
-                new Class<?>[]{UserMapper.class},
-                (proxy, method, args) -> switch (method.getName()) {
-                    case "listRoleCodesByUserId" -> roleCodes;
-                    case "listPermissionCodesByUserId" -> permissionCodesByUser;
-                    case "listAllEnabledPermissionCodes" -> allEnabledPermissionCodes;
-                    case "toString" -> "UserMapperTestProxy";
-                    case "hashCode" -> System.identityHashCode(proxy);
-                    case "equals" -> proxy == args[0];
-                    default -> null;
-                });
+    @Test
+    void getCurrentUser_ShouldDelegateToClientRpc() throws Exception {
+        StubClientUserRpcService clientUserRpcService = new StubClientUserRpcService();
+        UserVo userVo = new UserVo();
+        userVo.setId(99L);
+        clientUserRpcService.userVo = userVo;
+
+        UserServiceImpl userService = createService(new StubAdminAuthRpcService(), clientUserRpcService);
+
+        UserVo current = userService.getCurrentUser(99L);
+
+        assertNotNull(current);
+        assertEquals(99L, current.getId());
+        assertEquals(99L, clientUserRpcService.capturedUserId);
+    }
+
+    @Test
+    void getUserByUsername_ShouldReturnUserFromAuthContext() throws Exception {
+        StubAdminAuthRpcService adminAuthRpcService = new StubAdminAuthRpcService();
+        User user = new User();
+        user.setId(1L);
+        user.setUsername("admin");
+
+        AdminAuthContextDto context = new AdminAuthContextDto();
+        context.setUser(user);
+        adminAuthRpcService.byUsername = context;
+
+        UserServiceImpl userService = createService(adminAuthRpcService, new StubClientUserRpcService());
+
+        User result = userService.getUserByUsername("admin");
+
+        assertNotNull(result);
+        assertEquals(1L, result.getId());
+    }
+
+    private UserServiceImpl createService(StubAdminAuthRpcService adminAuthRpcService,
+                                          StubClientUserRpcService clientUserRpcService) throws Exception {
+        UserServiceImpl userService = new UserServiceImpl();
+        setField(userService, "adminAgentAuthRpcService", adminAuthRpcService);
+        setField(userService, "clientAgentUserRpcService", clientUserRpcService);
+        return userService;
+    }
+
+    private static class StubAdminAuthRpcService implements AdminAgentAuthRpcService {
+
+        private AdminAuthContextDto byUserId;
+        private AdminAuthContextDto byUsername;
+
+        @Override
+        public AdminAuthContextDto getByUserId(Long userId) {
+            return byUserId;
+        }
+
+        @Override
+        public AdminAuthContextDto getByUsername(String username) {
+            return byUsername;
+        }
+    }
+
+    private static class StubClientUserRpcService implements ClientAgentUserRpcService {
+
+        private Long capturedUserId;
+        private UserVo userVo;
+
+        @Override
+        public UserVo getCurrentUser(Long userId) {
+            this.capturedUserId = userId;
+            return userVo;
+        }
     }
 }
